# appstore

./: .babelrc  .gitignore  .project  README.md  package.json  vite.config.ts
.github/workflows/: build-tauri-mac-aarch64.yml  build-tauri-mac-x86.yml  build-tauri-mac.yml  build-tauri-windows.yml  build-tauri.yml
docs/: install-aarch64.sh  install-macos-aarch64.sh  install-macos-x86_64.sh  install-windows-x86_64.sh  vnt-cli-aarch64  vnt-cli-x86_64
src/: App.tsx  globals.css  logger.ts  main.tsx
src-tauri/: Cargo.toml  Info.plist  models.db  registries.conf  registries_asia.conf  registries_cn.conf  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/libs/: libepoxy.dylib  libfdt.dylib  libvirglrenderer.1.dylib
src-tauri/src/: lib.rs  main.rs  shared_lib.rs
src/hooks/: EnvContext.tsx  LocaleContext.tsx
src/lang/: en.json  fr.json
src/pages/: AddRemotePage.tsx  AppDetail.tsx  AppPage.tsx  Arguments.tsx  BLEPage.tsx  Home.tsx  Initalize.tsx  Install.tsx  IntroPage.tsx  Layout.tsx  LoadingPage.tsx  NoPage.tsx  PatchPage.tsx  Settings.tsx  SettingsPage.tsx  SetupRemotePage.tsx  ShellPage.tsx
