[package]
name = "appstore"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "appstore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools", "macos-proxy", "unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
futures-util = "0.3.30"
tokio = "1.40.0"
tokio-tungstenite = "0.24.0"
once_cell = "1.20.1"
url = "2.5.2"
tauri-plugin-deep-link = "2"
tauri-plugin-log = "2"
reqwest = { version = "0.12.8", features = [] }
serde_yaml = "0.9.34"
log = "0.4.22"
wry = "0.45.0"
tao = "0.30.3"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-localhost = "2"
zip = "2.2.0"
tar = "0.4.42"
flate2 = "1.0.34"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = { version = "2.0.1", features = [] }

